# workshop-jsl-2025

./: .env.example  .gitignore  README.md  pyproject.toml
notebooks/: 00_eotdl.ipynb  01_explorar_descargar.ipynb  02_crear_dataset.ipynb  02_ingesta.ipynb  03_crear_dataset.ipynb  03_ingestar_dataset.ipynb  04_scaneo.ipynb  05_entrenar_modelo.ipynb  06_contribuir.ipynb
notebooks/workshop_data/EuroSAT-small/: README.md  catalog.parquet
