[project]
name = "workshop-jsl-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "eotdl>=2025.6.27.post2",
    "ipykernel>=6.30.1",
    "leafmap>=0.52.1",
    "pytorch-eo>=2025.4.3",
    "scaneo>=2025.6.23",
    "sentinelhub>=3.11.1",
]
